...
    "tab.groups.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "グループ"
          }
        }
      }
    },
    "tab.notifications.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "お知らせ"
          }
        }
      }
    },
    "tab.profile.title" : {
      "extractionState" : "manual",
...
